add custom errors
